--- a/AuctionServer/pom.xml
+++ b/AuctionServer/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.neumont.csc380</groupId>
-  <artifactId>authorization</artifactId>
+  <artifactId>auction</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>authorization Maven Webapp</name>
+  <name>auction Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
   	<cxf.version>2.7.11</cxf.version>
@@ -13,6 +13,15 @@
   </properties>
 
   <dependencies>
+  
+  	<!-- AuthClient dependency -->
+	<dependency>
+		<groupId>edu.neumont.csc380</groupId>
+		<artifactId>authClient</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<scope>compile</scope>
+	</dependency>
+  
   	<!-- Jasypt (encryption) -->
   	<dependency>
 		<groupId>org.jasypt</groupId>
@@ -77,6 +86,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>authorization</finalName>
+    <finalName>auction</finalName>
   </build>
 </project>
