--- a/ProfileJavaAPI/hellorest/pom.xml
+++ b/ProfileJavaAPI/hellorest/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.neumont.csc380</groupId>
-  <artifactId>hellorest-server</artifactId>
+  <artifactId>profile-server</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>hellorest-server Maven Webapp</name>
+  <name>profile-server Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
   	<cxf.version>2.7.11</cxf.version>
@@ -64,7 +64,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>hellorest-server</finalName>
+    <finalName>profile-server</finalName>
     
     <pluginManagement>
         <plugins>
