--- a/ProfileJavaAPI/hellorest/pom.xml
+++ b/ProfileJavaAPI/hellorest/pom.xml
@@ -13,6 +13,15 @@
   </properties>
 
   <dependencies>
+  
+  <!-- AuthClient dependency -->
+	<dependency>
+		<groupId>edu.neumont.csc380</groupId>
+		<artifactId>authClient</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<scope>compile</scope>
+	</dependency>
+	
     <dependency>
 		<groupId>org.apache.cxf</groupId>
 		<artifactId>cxf-rt-frontend-jaxrs</artifactId>
