Updated Profile's pom
Should enable to use AuthClient?

--- a/ProfileJavaAPI/hellorest/pom.xml
+++ b/ProfileJavaAPI/hellorest/pom.xml
@@ -20,6 +20,7 @@
 		<artifactId>authClient</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<scope>compile</scope>
+		<type>war</type>
 	</dependency>
 	
     <dependency>
