--- a/AuthClient/pom.xml
+++ b/AuthClient/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.neumont.csc380</groupId>
   <artifactId>authClient</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>authClient Maven Webapp</name>
   <url>http://maven.apache.org</url>
