--- a/ProfileJavaAPI/hellorest/pom.xml
+++ b/ProfileJavaAPI/hellorest/pom.xml
@@ -67,6 +67,7 @@
     	<groupId>edu.neumont.csc380</groupId>
     	<artifactId>authClient</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
+    	<type>war</type>
     </dependency>
   </dependencies>
   <build>
